--- a/index.html
+++ b/index.html
@@ -5,8 +5,107 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
+   <header class="main-header">
+       <div class="menu-header">
+           <div class="logo"><a>Техномарт</a></div>
+           <div class="search">
+              <button class="search-button">Иконка</button>
+              <input type="text" class="search-input" placeholder="Поиск:">
+           </div>
+           <div class="bookmarks"><a href="#">Закладки:</a></div>
+           <div class="cart"><a href="#">Корзина:</a></div>
+           <div class="checkout"><a href="#">Оформить заказ</a></div>
+       </div>
+       <div>
+           <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+           <div class="contacts">
+               +7 (812) 555-05-55<br>
+               г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+           </div>
+           <ul class="user-navigation">
+               <li class="login-link">Войти</li>
+               <li class="check-in">Регистрация</li>
+           </ul>
+       </div>
+       <nav class="main-navigation">
+           <ul class="site-navigation">
+               <li><a href="#">Главная</a></li>
+               <li><a href="about-us.html">Компания</a></li>
+               <li><a href="catalog.html">Каталог</a></li>
+               <li><a href="news.html">Новости</a></li>
+               <li><a href="special-offers.html">Спецпредложения</a></li>
+               <li><a href="contacts.html">Контакты</a></li>
+           </ul>
+       </nav>
+   </header>
+   <main class="container">
+     <section class="features">
+      <h2>КОМПАНИЯ «Техномарт»</h2> <!--Здесь описываются преимущества компании насколько адекватно создать заголовок "преимущество" и скрыть, а этот выделить b-->
+       <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+       <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+       Техномарт работает со многими транспортными компаниями:</p>
+       <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+       </ul>
+       <a class="btn" href="#">Подробнее о компании</a>
+       </section>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+       <section class="contacts">
+           <h2>Контакты</h2>
+           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+           <a href="https://goo.gl/maps/ZmJwQj2DgqaKfvfU9" target="_blank"><img src="http://placehold.it/300x158" width="300" height="158" alt="Карта"></a>
+           <a class="btn" href="#">Заблудились? Напишите нам!</a>
+       </section>
+   </main>
+
+   <footer class="main-footer">
+      <div class="footer-header">
+          <div class="footer-logo"><a href="#">Техномарт</a></div>
+          <div class="footer-contacts">
+             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+             7 (812) 555-05-55
+          </div>
+          <div class="footer-navigation">
+              <ul class="footer-navigation__top">
+                 <li><a href="#">Компания</a></li>
+                 <li><a href="#">Новости</a></li>
+                 <li><a href="catalog.html">Каталог</a></li>
+                 <li><a href="#">Доставка</a></li>
+                 <li><a href="#">Контакты</a></li>
+              </ul>
+
+              <ul class="footer-navigation__boottom">
+                 <li><a href="#">Материалы</a></li>
+                 <li><a href="#">Техника</a></li>
+                 <li><a href="#">Инструмент</a></li>
+                 <li><a href="#">Спецпредложение</a></li>
+              </ul>
+          </div>
+       </div>
+       <div class="footer-bootom">
+           <div class="footer-copyright">
+               © 2010–2019 Компания «Техномарт»<br>
+               Все права защищены
+           </div>
+           <div class="footer-social">
+               <ul>
+                   <li><a class="social-btn" href="#">Вконтакте</a></li>
+                   <li><a class="social-btn" href="#">Фейсбук</a></li>
+                   <li><a class="social-btn" href="#">Инстаграм</a></li>
+               </ul>
+           </div>
+           <div class="feedback">
+               Обратная связь:
+               <a class="btn" href="#">mail@htmlacademy.ru</a>
+           </div>
+           <div class="author">
+               Разработано:
+               <a class="btn" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+           </div>
+       </div>
+   </footer>
 
   </body>
 </html>
