--- a/catalog.html
+++ b/catalog.html
@@ -6,44 +6,47 @@
 </head>
 <body>
     <header class="main-header">
-       <div class="menu-header">
-           <div class="logo"><a href="index.html">Техномарт</a></div>
-           <div class="search"><span>Поиск:</span></div>
-           <div class="bookmarks"><a href="#">Закладки:</a></div>
-           <div class="cart"><a href="#">Корзина:</a></div>
-           <div class="checkout"><a href="#">Оформить заказ</a></div>
+       <div class="header-top">
+           <div class="logo"><a>Техномарт</a></div>
+           <div class="search">
+              <button class="search-button">Иконка</button>
+              <input type="text" class="search-input" placeholder="Поиск:">
+           </div>
+           <ul class="header-list">
+               <li class="bookmarks"><a href="#">Закладки:</a></li>
+               <li class="cart"><a href="#">Корзина:</a></li>
+               <li class="checkout"><a href="#">Оформить заказ</a></li>
+           </ul>
        </div>
-       <div>
+       <div class="header-info">
            <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
            <div class="contacts">
                +7 (812) 555-05-55<br>
                г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
            </div>
-           <div>
-           <span>Равшан Джамшутович</span>
-               <ul class="user-navigation">
-                   <li class="orders">Мои заказы</li>
-                   <li class="private-office">Личный кабинет</li>
-               </ul>
-           </div>
+           <ul class="user-navigation">
+               <li class="login-link">Войти</li>
+               <li class="check-in">Регистрация</li>
+           </ul>
        </div>
        <nav class="main-navigation">
            <ul class="site-navigation">
-               <li><a href="index.html">Главная</a></li>
+               <li><a href="#">Главная</a></li>
                <li><a href="about-us.html">Компания</a></li>
-               <li class="site-navigation-current"><a href="#">Каталог</a></li>
+               <li><a href="catalog.html">Каталог</a></li>
                <li><a href="news.html">Новости</a></li>
                <li><a href="special-offers.html">Спецпредложения</a></li>
                <li><a href="contacts.html">Контакты</a></li>
            </ul>
        </nav>
    </header>
+
    <main class="container">
        <ul class="breadcrumbs">
            <li><a href="index.html">Иконка <!--Найти и вставить--></a></li>
            <li><a href="#">Каталог</a></li>
            <li><a href="#">Инструменты</a></li>
-           <li class="breadcrumbs-current"><a href="#">Перфораторы</a></li>
+           <li><a href="#">Перфораторы</a></li>
        </ul>
        <h2>Перфораторы</h2>
        <section class="filter">
@@ -56,117 +59,115 @@
            <ul class="catalog-list">
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
-                   <div class="item-img"><!--при наличии класса new-flag в сss строится значок new-->
+                   <div class="catalog-item-img new">
                        <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
-                   <div class="catalog-text">
+                   <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
                        <a class="btn btn-bookmark" href="#">В закладки</a>
                    </div>
-                   <p class="count-old">22500 Р.</p>
-                   <p class="count-new">15500 Р.</p>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
                </li>
-               <li class="catalog-item">
-                   <h4>Перфоратор BOSCH BFG 6000</h4>
-                   <div class="item-img"><!--при наличии класса new-flag в сss строится значок new-->
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-                   </div>
-                   <div class="catalog-text">
-                       <a class="btn btn-buy" href="#">Купить</a>
-                       <a class="btn btn-bookmark" href="#">В закладки</a>
-                   </div>
-                   <p class="count-old">30500 Р.</p>
-                   <p class="count-new">25500 Р.</p>
-               </li>
-               <li class="catalog-item">
-                   <h4>Перфоратор BOSCH BFG 2000</h4>
-                   <div class="item-img new-flag"><!--при наличии класса new-flag в сss строится значок new-->
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-                   </div>
-                   <div class="catalog-text">
-                       <a class="btn btn-buy" href="#">Купить</a>
-                       <a class="btn btn-bookmark" href="#">В закладки</a>
-                   </div>
-                   <p class="count-old"> </p>
-                   <p class="count-new">12500 Р.</p>
-               </li>
-
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
-                   <div class="item-img"><!--при наличии класса new-flag в сss строится значок new-->
+                   <div class="catalog-item-img">
                        <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
-                   <div class="catalog-text">
+                   <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
                        <a class="btn btn-bookmark" href="#">В закладки</a>
                    </div>
-                   <p class="count-old">22500 Р.</p>
-                   <p class="count-new">15500 Р.</p>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
                </li>
-               <li class="catalog-item">
-                   <h4>Перфоратор BOSCH BFG 6000</h4>
-                   <div class="item-img new-flag"><!--при наличии класса new-flag в сss строится значок new-->
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-                   </div>
-                   <div class="catalog-text">
-                       <a class="btn btn-buy" href="#">Купить</a>
-                       <a class="btn btn-bookmark" href="#">В закладки</a>
-                   </div>
-                   <p class="count-old">30500 Р.</p>
-                   <p class="count-new">25500 Р.</p>
-               </li>
-               <li class="catalog-item">
-                   <h4>Перфоратор BOSCH BFG 2000</h4>
-                   <div class="item-img"><!--при наличии класса new-flag в сss строится значок new-->
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-                   </div>
-                   <div class="catalog-text">
-                       <a class="btn btn-buy" href="#">Купить</a>
-                       <a class="btn btn-bookmark" href="#">В закладки</a>
-                   </div>
-                   <p class="count-old"></p>
-                   <p class="count-new">12500 Р.</p>
-               </li>
-
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
-                   <div class="item-img new-flag"><!--при наличии класса new-flag в сss строится значок new-->
+                   <div class="catalog-item-img">
                        <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
-                   <div class="catalog-text">
+                   <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
                        <a class="btn btn-bookmark" href="#">В закладки</a>
                    </div>
-                   <p class="count-old">22500 Р.</p>
-                   <p class="count-new">15500 Р.</p>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item">
-                   <h4>Перфоратор BOSCH BFG 6000</h4>
-                   <div class="item-img"><!--при наличии класса new-flag в сss строится значок new-->
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+                   <h4>Перфоратор BOSCH BFG 3000</h4>
+                   <div class="catalog-item-img">
+                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
-                   <div class="catalog-text">
+                   <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
                        <a class="btn btn-bookmark" href="#">В закладки</a>
                    </div>
-                   <p class="count-old">30500 Р.</p>
-                   <p class="count-new">25500 Р.</p>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item">
-                   <h4>Перфоратор BOSCH BFG 2000</h4>
-                   <div class="item-img"><!--при наличии класса new-flag в сss строится значок new-->
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+                   <h4>Перфоратор BOSCH BFG 3000</h4>
+                   <div class="catalog-item-img">
+                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
-                   <div class="catalog-text">
+                   <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
                        <a class="btn btn-bookmark" href="#">В закладки</a>
                    </div>
-                   <p class="count-old"> </p>
-                   <p class="count-new">12500 Р.</p>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
                </li>
+               <li class="catalog-item">
+                   <h4>Перфоратор BOSCH BFG 3000</h4>
+                   <div class="catalog-item-img">
+                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                   </div>
+                   <div class="catalog-item-action">
+                       <a class="btn btn-buy" href="#">Купить</a>
+                       <a class="btn btn-bookmark" href="#">В закладки</a>
+                   </div>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
+               </li>
+               <li class="catalog-item">
+                   <h4>Перфоратор BOSCH BFG 3000</h4>
+                   <div class="catalog-item-img">
+                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                   </div>
+                   <div class="catalog-item-action">
+                       <a class="btn btn-buy" href="#">Купить</a>
+                       <a class="btn btn-bookmark" href="#">В закладки</a>
+                   </div>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
+               </li>
+               <li class="catalog-item">
+                   <h4>Перфоратор BOSCH BFG 3000</h4>
+                   <div class="catalog-item-img">
+                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                   </div>
+                   <div class="catalog-item-action">
+                       <a class="btn btn-buy" href="#">Купить</a>
+                       <a class="btn btn-bookmark" href="#">В закладки</a>
+                   </div>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
+               </li>
+               <li class="catalog-item">
+                   <h4>Перфоратор BOSCH BFG 3000</h4>
+                   <div class="catalog-item-img">
+                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                   </div>
+                   <div class="catalog-item-action">
+                       <a class="btn btn-buy" href="#">Купить</a>
+                       <a class="btn btn-bookmark" href="#">В закладки</a>
+                   </div>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
+               </li>
+
            </ul>
            <ul class="pagination-list">
-              <li class="pagination-item pagination-item_previous"><a href="#">Предыдущая</a></li>
               <li class="pagination-item pagination-item-current"><a>1</a></li>
               <li class="pagination-item"><a href="#">2</a></li>
               <li class="pagination-item"><a href="#">3</a></li>
@@ -177,21 +178,21 @@
 
    <footer class="main-footer">
       <div class="footer-header">
-          <div class="footer-logo"><a>Техномарт</a></div>
+          <div class="footer-logo"><a href="#">Техномарт</a></div>
           <div class="footer-contacts">
              г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
              7 (812) 555-05-55
           </div>
-          <div class="footer-navigation">
-              <ul class="footer-navigation__top">
+          <div class="footer-nav">
+              <ul class="footer-nav-list">
                  <li><a href="#">Компания</a></li>
                  <li><a href="#">Новости</a></li>
-                 <li><a href="#">Каталог</a></li>
+                 <li><a href="catalog.html">Каталог</a></li>
                  <li><a href="#">Доставка</a></li>
                  <li><a href="#">Контакты</a></li>
               </ul>
 
-              <ul class="footer-navigation__boottom">
+              <ul class="footer-offer-list">
                  <li><a href="#">Материалы</a></li>
                  <li><a href="#">Техника</a></li>
                  <li><a href="#">Инструмент</a></li>
@@ -199,23 +200,21 @@
               </ul>
           </div>
        </div>
-       <div class="footer-bootom">
+       <div class="footer-bottom">
            <div class="footer-copyright">
                © 2010–2019 Компания «Техномарт»<br>
                Все права защищены
            </div>
-           <div class="footer-social">
-               <ul>
-                   <li><a class="social-btn" href="#">Вконтакте</a></li>
-                   <li><a class="social-btn" href="#">Фейсбук</a></li>
-                   <li><a class="social-btn" href="#">Инстаграм</a></li>
-               </ul>
-           </div>
+            <ul class="footer-social">
+                <li><a class="social-btn" href="#">Вконтакте</a></li>
+                <li><a class="social-btn" href="#">Фейсбук</a></li>
+                <li><a class="social-btn" href="#">Инстаграм</a></li>
+            </ul>
            <div class="feedback">
                Обратная связь:
                <a class="btn" href="#">mail@htmlacademy.ru</a>
            </div>
-           <div class="author">
+           <div class="develop">
                Разработано:
                <a class="btn" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
            </div>
