--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
   </head>
   <body>
    <header class="main-header">
-       <div class="menu-header">
+       <div class="header-top">
            <div class="logo"><a>Техномарт</a></div>
            <div class="search">
               <button class="search-button">Иконка</button>
               <input type="text" class="search-input" placeholder="Поиск:">
            </div>
-           <div class="bookmarks"><a href="#">Закладки:</a></div>
-           <div class="cart"><a href="#">Корзина:</a></div>
-           <div class="checkout"><a href="#">Оформить заказ</a></div>
+           <ul class="header-list">
+               <li class="bookmarks"><a href="#">Закладки:</a></li>
+               <li class="cart"><a href="#">Корзина:</a></li>
+               <li class="checkout"><a href="#">Оформить заказ</a></li>
+           </ul>
        </div>
-       <div>
+       <div class="header-info">
            <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
            <div class="contacts">
                +7 (812) 555-05-55<br>
@@ -40,7 +42,8 @@
    </header>
    <main class="container">
      <section class="features">
-      <h2>КОМПАНИЯ «Техномарт»</h2> <!--Здесь описываются преимущества компании насколько адекватно создать заголовок "преимущество" и скрыть, а этот выделить b-->
+     <h2 class="visually-hidden">Преимущества компании</h2>
+      <h2>Компания «Техномарт»</h2> <!--Здесь описываются преимущества компании насколько адекватно создать заголовок "преимущество" и скрыть, а этот выделить b-->
        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
        <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
        Техномарт работает со многими транспортными компаниями:</p>
@@ -67,8 +70,8 @@
              г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
              7 (812) 555-05-55
           </div>
-          <div class="footer-navigation">
-              <ul class="footer-navigation__top">
+          <div class="footer-nav">
+              <ul class="footer-nav-list">
                  <li><a href="#">Компания</a></li>
                  <li><a href="#">Новости</a></li>
                  <li><a href="catalog.html">Каталог</a></li>
@@ -76,7 +79,7 @@
                  <li><a href="#">Контакты</a></li>
               </ul>
 
-              <ul class="footer-navigation__boottom">
+              <ul class="footer-offer-list">
                  <li><a href="#">Материалы</a></li>
                  <li><a href="#">Техника</a></li>
                  <li><a href="#">Инструмент</a></li>
@@ -84,23 +87,21 @@
               </ul>
           </div>
        </div>
-       <div class="footer-bootom">
+       <div class="footer-bottom">
            <div class="footer-copyright">
                © 2010–2019 Компания «Техномарт»<br>
                Все права защищены
            </div>
-           <div class="footer-social">
-               <ul>
-                   <li><a class="social-btn" href="#">Вконтакте</a></li>
-                   <li><a class="social-btn" href="#">Фейсбук</a></li>
-                   <li><a class="social-btn" href="#">Инстаграм</a></li>
-               </ul>
-           </div>
+            <ul class="footer-social">
+                <li><a class="social-btn" href="#">Вконтакте</a></li>
+                <li><a class="social-btn" href="#">Фейсбук</a></li>
+                <li><a class="social-btn" href="#">Инстаграм</a></li>
+            </ul>
            <div class="feedback">
                Обратная связь:
                <a class="btn" href="#">mail@htmlacademy.ru</a>
            </div>
-           <div class="author">
+           <div class="develop">
                Разработано:
                <a class="btn" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
            </div>
