3. работа над ошибками №2

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,6 @@
        <div class="header-top">
            <div class="logo"><a>Техномарт</a></div>
            <div class="search">
-              <button class="search-button">Иконка</button>
               <input type="text" class="search-input" placeholder="Поиск:">
            </div>
            <ul class="header-list">
@@ -205,7 +204,7 @@
                © 2010–2019 Компания «Техномарт»<br>
                Все права защищены
            </div>
-            <ul class="footer-social">
+            <ul class="social-list">
                 <li><a class="social-btn" href="#">Вконтакте</a></li>
                 <li><a class="social-btn" href="#">Фейсбук</a></li>
                 <li><a class="social-btn" href="#">Инстаграм</a></li>
