--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
        <div class="header-top">
            <div class="logo"><a>Техномарт</a></div>
            <div class="search">
-              <button class="search-button">Иконка</button>
               <input type="text" class="search-input" placeholder="Поиск:">
            </div>
            <ul class="header-list">
@@ -45,8 +44,7 @@
      <h2 class="visually-hidden">Преимущества компании</h2>
       <h2>Компания «Техномарт»</h2> <!--Здесь описываются преимущества компании насколько адекватно создать заголовок "преимущество" и скрыть, а этот выделить b-->
        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-       <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-       Техномарт работает со многими транспортными компаниями:</p>
+       <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
        <ul>
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
@@ -92,7 +90,7 @@
                © 2010–2019 Компания «Техномарт»<br>
                Все права защищены
            </div>
-            <ul class="footer-social">
+            <ul class="social-list">
                 <li><a class="social-btn" href="#">Вконтакте</a></li>
                 <li><a class="social-btn" href="#">Фейсбук</a></li>
                 <li><a class="social-btn" href="#">Инстаграм</a></li>
