Готовим графику личного проекта

--- a/index.html
+++ b/index.html
@@ -40,9 +40,90 @@
        </nav>
    </header>
    <main class="container">
+     <section class="services">
+         <h2 class="visually-hidden">Услуги</h2>
+         <!-- Оставить на потом не понятна сетка-->
+     </section>
+
+     <section class="popular-goods">
+         <div class="popular-goods-header">
+             <h2>Популярный товары</h2>
+             <a href="#">Все популярные товары</a>
+         </div>
+         <ul class="popular-catalog-list">
+               <li class="popular-catalog-item">
+                   <h4>Перфоратор BOSCH BFG 9000</h4>
+                   <div class="catalog-item-img new">
+                       <img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                   </div>
+                   <div class="catalog-item-action">
+                       <a class="btn btn-buy" href="#">Купить</a>
+                       <a class="btn btn-bookmark" href="#">В закладки</a>
+                   </div>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
+               </li>
+               <li class="popular-catalog-item">
+                   <h4>Перфоратор BOSCH BFG 9000</h4>
+                   <div class="catalog-item-img new">
+                       <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                   </div>
+                   <div class="catalog-item-action">
+                       <a class="btn btn-buy" href="#">Купить</a>
+                       <a class="btn btn-bookmark" href="#">В закладки</a>
+                   </div>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
+               </li>
+               <li class="popular-catalog-item">
+                   <h4>Перфоратор BOSCH BFG 9000</h4>
+                   <div class="catalog-item-img new">
+                       <img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                   </div>
+                   <div class="catalog-item-action">
+                       <a class="btn btn-buy" href="#">Купить</a>
+                       <a class="btn btn-bookmark" href="#">В закладки</a>
+                   </div>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
+               </li>
+               <li class="popular-catalog-item">
+                   <h4>Перфоратор BOSCH BFG 9000</h4>
+                   <div class="catalog-item-img new">
+                       <img src="img/Perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                   </div>
+                   <div class="catalog-item-action">
+                       <a class="btn btn-buy" href="#">Купить</a>
+                       <a class="btn btn-bookmark" href="#">В закладки</a>
+                   </div>
+                   <p class="discount">22500 Р.</p>
+                   <p class="price">15500 Р.</p>
+               </li>
+         </ul>
+     </section>
+
+     <section class="brand">
+         <div class="brand-header">
+             <h2>Популярные производители:</h2>
+             <a href="">Все производители</a>
+         </div>
+         <ul class="brand-catalog-list">
+             <li class="brand-catalog-item"><a href=""><img src="img/bosch.jpg" alt="Bosch"></a></li>
+             <li class="brand-catalog-item"><a href=""><img src="img/Makita.jpg" alt="makita"></a></li>
+             <li class="brand-catalog-item"><a href=""><img src="img/DeWALT.jpg" alt="dewalt"></a></li>
+             <li class="brand-catalog-item"><a href=""><img src="img/interscol.jpg" alt="интерскол"></a></li>
+             <li class="brand-catalog-item"><a href=""><img src="img/Hitachi.jpg" alt="hitachi"></a></li>
+             <li class="brand-catalog-item"><a href=""><img src="img/LG.jpg" alt="lg"></a></li>
+             <li class="brand-catalog-item"><a href=""><img src="img/AEG.jpg" alt="aeg"></a></li>
+             <li class="brand-catalog-item"><a href=""><img src="img/Metabo.jpg" alt="matabo"></a></li>
+         </ul>
+     </section>
+
+
+
      <section class="features">
      <h2 class="visually-hidden">Преимущества компании</h2>
-      <h2>Компания «Техномарт»</h2> <!--Здесь описываются преимущества компании насколько адекватно создать заголовок "преимущество" и скрыть, а этот выделить b-->
+      <h2>Компания «Техномарт»</h2>
        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
        <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
        <ul>
@@ -56,7 +137,7 @@
        <section class="contacts">
            <h2>Контакты</h2>
            <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-           <a href="https://goo.gl/maps/ZmJwQj2DgqaKfvfU9" target="_blank"><img src="http://placehold.it/300x158" width="300" height="158" alt="Карта"></a>
+           <a href="https://goo.gl/maps/ZmJwQj2DgqaKfvfU9" target="_blank"><img src="img/map.jpg" width="300" height="158" alt="Карта"></a>
            <a class="btn" href="#">Заблудились? Напишите нам!</a>
        </section>
    </main>
@@ -91,9 +172,9 @@
                Все права защищены
            </div>
             <ul class="social-list">
-                <li><a class="social-btn" href="#">Вконтакте</a></li>
-                <li><a class="social-btn" href="#">Фейсбук</a></li>
-                <li><a class="social-btn" href="#">Инстаграм</a></li>
+                <li class="social-item"><a class="social-btn" href="#"><img src="img/icon/vk-icon.svg" alt="Вконтакте"></a></li>
+                <li class="social-item"><a class="social-btn" href="#"><img src="img/icon/fb-icon.svg" alt="Фейсбук"></a></li>
+                <li class="social-item"><a class="social-btn" href="#"><img src="img/icon/insta-icon.svg" alt="Инстаграм"></a></li>
             </ul>
            <div class="feedback">
                Обратная связь:
