--- a/catalog.html
+++ b/catalog.html
@@ -42,7 +42,7 @@
 
    <main class="container">
        <ul class="breadcrumbs">
-           <li><a href="index.html">Иконка <!--Найти и вставить--></a></li>
+           <li><a href="index.html"><img src="img/icon/icon-home.svg" alt="На главную"></a></li>
            <li><a href="#">Каталог</a></li>
            <li><a href="#">Инструменты</a></li>
            <li><a href="#">Перфораторы</a></li>
@@ -59,7 +59,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img new">
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -71,7 +71,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -83,7 +83,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/Perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -95,7 +95,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -107,7 +107,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -119,7 +119,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/Perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -131,7 +131,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -143,7 +143,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -155,7 +155,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="http://placehold.it/218x170" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/Perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -205,9 +205,9 @@
                Все права защищены
            </div>
             <ul class="social-list">
-                <li><a class="social-btn" href="#">Вконтакте</a></li>
-                <li><a class="social-btn" href="#">Фейсбук</a></li>
-                <li><a class="social-btn" href="#">Инстаграм</a></li>
+                <li class="social-item"><a class="social-btn" href="#"><img src="img/icon/vk-icon.svg" alt="Вконтакте"></a></li>
+                <li class="social-item"><a class="social-btn" href="#"><img src="img/icon/fb-icon.svg" alt="Фейсбук"></a></li>
+                <li class="social-item"><a class="social-btn" href="#"><img src="img/icon/insta-icon.svg" alt="Инстаграм"></a></li>
             </ul>
            <div class="feedback">
                Обратная связь:
