Основное задание: готовим графику личного проекта
Работа над ошибками

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
    <header class="main-header">
        <div class="header-top">
-           <div class="logo"><a>Техномарт</a></div>
+           <div class="logo"><a><img src="img/icon/logo-technomart.svg" alt="ТЕХНОМАРТ"></a></div>
            <div class="search">
               <input type="text" class="search-input" placeholder="Поиск:">
            </div>
@@ -50,49 +50,49 @@
              <h2>Популярный товары</h2>
              <a href="#">Все популярные товары</a>
          </div>
-         <ul class="popular-catalog-list">
-               <li class="popular-catalog-item">
+         <ul class="popular-list">
+               <li class="popular-item">
                    <h4>Перфоратор BOSCH BFG 9000</h4>
-                   <div class="catalog-item-img new">
-                       <img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                   <div class="popular-item-img new">
+                       <img src="img/perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                    </div>
-                   <div class="catalog-item-action">
+                   <div class="popular-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
                        <a class="btn btn-bookmark" href="#">В закладки</a>
                    </div>
                    <p class="discount">22500 Р.</p>
                    <p class="price">15500 Р.</p>
                </li>
-               <li class="popular-catalog-item">
+               <li class="popular-item">
                    <h4>Перфоратор BOSCH BFG 9000</h4>
-                   <div class="catalog-item-img new">
-                       <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                   <div class="popular-item-img new">
+                       <img src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                    </div>
-                   <div class="catalog-item-action">
+                   <div class="popular-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
                        <a class="btn btn-bookmark" href="#">В закладки</a>
                    </div>
                    <p class="discount">22500 Р.</p>
                    <p class="price">15500 Р.</p>
                </li>
-               <li class="popular-catalog-item">
+               <li class="popular-item">
                    <h4>Перфоратор BOSCH BFG 9000</h4>
-                   <div class="catalog-item-img new">
-                       <img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                   <div class="popular-item-img new">
+                       <img src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                    </div>
-                   <div class="catalog-item-action">
+                   <div class="popular-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
                        <a class="btn btn-bookmark" href="#">В закладки</a>
                    </div>
                    <p class="discount">22500 Р.</p>
                    <p class="price">15500 Р.</p>
                </li>
-               <li class="popular-catalog-item">
+               <li class="popular-item">
                    <h4>Перфоратор BOSCH BFG 9000</h4>
-                   <div class="catalog-item-img new">
-                       <img src="img/Perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                   <div class="popular-item-img new">
+                       <img src="img/perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                    </div>
-                   <div class="catalog-item-action">
+                   <div class="popular-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
                        <a class="btn btn-bookmark" href="#">В закладки</a>
                    </div>
@@ -107,15 +107,15 @@
              <h2>Популярные производители:</h2>
              <a href="">Все производители</a>
          </div>
-         <ul class="brand-catalog-list">
-             <li class="brand-catalog-item"><a href=""><img src="img/bosch.jpg" alt="Bosch"></a></li>
-             <li class="brand-catalog-item"><a href=""><img src="img/Makita.jpg" alt="makita"></a></li>
-             <li class="brand-catalog-item"><a href=""><img src="img/DeWALT.jpg" alt="dewalt"></a></li>
-             <li class="brand-catalog-item"><a href=""><img src="img/interscol.jpg" alt="интерскол"></a></li>
-             <li class="brand-catalog-item"><a href=""><img src="img/Hitachi.jpg" alt="hitachi"></a></li>
-             <li class="brand-catalog-item"><a href=""><img src="img/LG.jpg" alt="lg"></a></li>
-             <li class="brand-catalog-item"><a href=""><img src="img/AEG.jpg" alt="aeg"></a></li>
-             <li class="brand-catalog-item"><a href=""><img src="img/Metabo.jpg" alt="matabo"></a></li>
+         <ul class="brand-list">
+             <li class="brand-item"><a href=""><img src="img/bosch.jpg" alt="Bosch"></a></li>
+             <li class="brand-item"><a href=""><img src="img/makita.jpg" alt="makita"></a></li>
+             <li class="brand-item"><a href=""><img src="img/dewalt.jpg" alt="dewalt"></a></li>
+             <li class="brand-item"><a href=""><img src="img/interscol.jpg" alt="интерскол"></a></li>
+             <li class="brand-item"><a href=""><img src="img/hitachi.jpg" alt="hitachi"></a></li>
+             <li class="brand-item"><a href=""><img src="img/lg.jpg" alt="lg"></a></li>
+             <li class="brand-item"><a href=""><img src="img/aeg.jpg" alt="aeg"></a></li>
+             <li class="brand-item"><a href=""><img src="img/metabo.jpg" alt="metabo"></a></li>
          </ul>
      </section>
 
@@ -172,9 +172,9 @@
                Все права защищены
            </div>
             <ul class="social-list">
-                <li class="social-item"><a class="social-btn" href="#"><img src="img/icon/vk-icon.svg" alt="Вконтакте"></a></li>
-                <li class="social-item"><a class="social-btn" href="#"><img src="img/icon/fb-icon.svg" alt="Фейсбук"></a></li>
-                <li class="social-item"><a class="social-btn" href="#"><img src="img/icon/insta-icon.svg" alt="Инстаграм"></a></li>
+                <li class="social-item"><a class="social-btn-vk" href="#">Вконтакте</a></li>
+                <li class="social-item"><a class="social-btn-fb" href="#">Фейсбук"</a></li>
+                <li class="social-item"><a class="social-btn-insta" href="#">Инстаграм</a></li>
             </ul>
            <div class="feedback">
                Обратная связь:
