--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
     <header class="main-header">
        <div class="header-top">
-           <div class="logo"><a>Техномарт</a></div>
+           <div class="logo"><a href="index.html"><img src="img/icon/logo-technomart.svg" alt="ТЕХНОМАРТ"></a></div>
            <div class="search">
               <input type="text" class="search-input" placeholder="Поиск:">
            </div>
@@ -59,7 +59,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img new">
-                       <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -71,7 +71,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -83,7 +83,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/Perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -95,7 +95,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -107,7 +107,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -119,7 +119,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/Perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -131,7 +131,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -143,7 +143,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -155,7 +155,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/Perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -205,9 +205,9 @@
                Все права защищены
            </div>
             <ul class="social-list">
-                <li class="social-item"><a class="social-btn" href="#"><img src="img/icon/vk-icon.svg" alt="Вконтакте"></a></li>
-                <li class="social-item"><a class="social-btn" href="#"><img src="img/icon/fb-icon.svg" alt="Фейсбук"></a></li>
-                <li class="social-item"><a class="social-btn" href="#"><img src="img/icon/insta-icon.svg" alt="Инстаграм"></a></li>
+                <li class="social-item"><a class="social-btn-vk" href="#">Вконтакте</a></li>
+                <li class="social-item"><a class="social-btn-fb" href="#">Фейсбук"</a></li>
+                <li class="social-item"><a class="social-btn-insta" href="#">Инстаграм</a></li>
             </ul>
            <div class="feedback">
                Обратная связь:
