Основное задание: готовим графику личного проекта
Работа над ошибками 2

--- a/catalog.html
+++ b/catalog.html
@@ -59,7 +59,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img new">
-                       <img src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -71,7 +71,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -83,7 +83,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -95,7 +95,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -107,7 +107,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -119,7 +119,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -131,7 +131,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -143,7 +143,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -155,7 +155,7 @@
                <li class="catalog-item">
                    <h4>Перфоратор BOSCH BFG 3000</h4>
                    <div class="catalog-item-img">
-                       <img src="img/perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+                       <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </div>
                    <div class="catalog-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
