--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                <li class="popular-item">
                    <h4>Перфоратор BOSCH BFG 9000</h4>
                    <div class="popular-item-img new">
-                       <img src="img/perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                       <img src="img/perf_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                    </div>
                    <div class="popular-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -66,7 +66,7 @@
                <li class="popular-item">
                    <h4>Перфоратор BOSCH BFG 9000</h4>
                    <div class="popular-item-img new">
-                       <img src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                       <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                    </div>
                    <div class="popular-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -78,7 +78,7 @@
                <li class="popular-item">
                    <h4>Перфоратор BOSCH BFG 9000</h4>
                    <div class="popular-item-img new">
-                       <img src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                       <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                    </div>
                    <div class="popular-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -90,7 +90,7 @@
                <li class="popular-item">
                    <h4>Перфоратор BOSCH BFG 9000</h4>
                    <div class="popular-item-img new">
-                       <img src="img/perforator_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                       <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                    </div>
                    <div class="popular-item-action">
                        <a class="btn btn-buy" href="#">Купить</a>
@@ -108,14 +108,14 @@
              <a href="">Все производители</a>
          </div>
          <ul class="brand-list">
-             <li class="brand-item"><a href=""><img src="img/bosch.jpg" alt="Bosch"></a></li>
-             <li class="brand-item"><a href=""><img src="img/makita.jpg" alt="makita"></a></li>
-             <li class="brand-item"><a href=""><img src="img/dewalt.jpg" alt="dewalt"></a></li>
-             <li class="brand-item"><a href=""><img src="img/interscol.jpg" alt="интерскол"></a></li>
-             <li class="brand-item"><a href=""><img src="img/hitachi.jpg" alt="hitachi"></a></li>
-             <li class="brand-item"><a href=""><img src="img/lg.jpg" alt="lg"></a></li>
-             <li class="brand-item"><a href=""><img src="img/aeg.jpg" alt="aeg"></a></li>
-             <li class="brand-item"><a href=""><img src="img/metabo.jpg" alt="metabo"></a></li>
+             <li class="brand-item"><a href=""><img src="img/brand-bosch.jpg" alt="Bosch"></a></li>
+             <li class="brand-item"><a href=""><img src="img/brand-makita.jpg" alt="makita"></a></li>
+             <li class="brand-item"><a href=""><img src="img/brand-dewalt.jpg" alt="dewalt"></a></li>
+             <li class="brand-item"><a href=""><img src="img/brand-interscol.jpg" alt="интерскол"></a></li>
+             <li class="brand-item"><a href=""><img src="img/brand-hitachi.jpg" alt="hitachi"></a></li>
+             <li class="brand-item"><a href=""><img src="img/brand-lg.jpg" alt="lg"></a></li>
+             <li class="brand-item"><a href=""><img src="img/brand-aeg.jpg" alt="aeg"></a></li>
+             <li class="brand-item"><a href=""><img src="img/brand-metabo.jpg" alt="metabo"></a></li>
          </ul>
      </section>
 
