Основное задание: готовим графику личного проекта
Исправленны социальные иконки

--- a/catalog.html
+++ b/catalog.html
@@ -205,9 +205,9 @@
                Все права защищены
            </div>
             <ul class="social-list">
-                <li class="social-item"><a class="social-btn-vk" href="#">Вконтакте</a></li>
-                <li class="social-item"><a class="social-btn-fb" href="#">Фейсбук"</a></li>
-                <li class="social-item"><a class="social-btn-insta" href="#">Инстаграм</a></li>
+                <li class="social-item"><a class="social-btn social-btn-vk" href="#">Вконтакте</a></li>
+                <li class="social-item"><a class="social-btn social-btn-fb" href="#">Фейсбук"</a></li>
+                <li class="social-item"><a class="social-btn social-btn-insta" href="#">Инстаграм</a></li>
             </ul>
            <div class="feedback">
                Обратная связь:
