Работа над ошибками

--- a/catalog.html
+++ b/catalog.html
@@ -94,7 +94,7 @@
                </fieldset>
                <button class="filter-btn btn" type="submit">Показать</button>
            </form>
-       </section>
+       </section> <!--/.filter-->
 
        <section class="catalog">
            <h3 class="visually-hidden">Список инструментов</h3>
