12. Основное задание: начинаем базовую стилизацию личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -15,10 +15,10 @@
               <label class="visually-hidden" for="header-search">Поиск</label>
               <input type="text" class="search-input" placeholder="Поиск:" id="header-search">
            </form>
-           <ul class="header-list">
+           <ul class="header-list reset-list">
                <li><a href="#">Закладки: <span>0</span></a></li>
                <li><a href="#">Корзина: <span>0</span></a></li>
-               <li><a href="#">Оформить заказ</a></li>
+               <li><a class="btn-order" href="#">Оформить заказ</a></li>
            </ul>
        </div>
        <div class="header-content">
@@ -37,7 +37,7 @@
            </div>
        </div>
        <nav class="main-navigation">
-           <ul class="site-navigation">
+           <ul class="site-navigation reset-list">
                <li><a href="index.html">Главная</a></li>
                <li><a href="#">Компания</a></li>
                <li><a href="#">Каталог</a></li>
@@ -49,7 +49,7 @@
    </header>
 
    <main class="container">
-       <ul class="breadcrumbs">
+       <ul class="breadcrumbs reset-list">
            <li><a href="index.html"><img src="img/icon/icon-home.svg" alt="На главную"></a></li>
            <li><a href="#">Каталог</a></li>
            <li><a href="#">Инструменты</a></li>
@@ -61,7 +61,7 @@
            <form class="filter" method="get" action="https://echo.htmlacademy.ru">
                <fieldset>
                    <legend>Производители:</legend>
-                   <ul>
+                   <ul class="reset-list">
                        <li class="filter-option">
                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="bosh" id="filter-bosh" checked>
                            <label for="filter-bosh">Bosh</label>
@@ -86,7 +86,7 @@
                </fieldset>
                <fieldset>
                    <legend>Питание:</legend>
-                   <ul>
+                   <ul class="reset-list">
                        <li class="filter-option">
                            <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="accumulator" id="filter-accumulator">
                            <label for="filter-accumulator">Аккумуляторные</label>
@@ -103,7 +103,7 @@
 
        <section class="catalog">
            <h3 class="visually-hidden">Список инструментов</h3>
-           <ul class="catalog-list">
+           <ul class="catalog-list reset-list">
                <li class="catalog-item new">
                    <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
                    <a href="#">
@@ -117,7 +117,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a class="catalog-item-name" href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
                    <a href="#">
                        <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -129,7 +129,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
                    <a href="#">
                        <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -141,7 +141,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
                    <a href="#">
                        <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -153,7 +153,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
                    <a href="#">
                        <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -165,7 +165,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
                    <a href="#">
                        <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -177,7 +177,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
                    <a href="#">
                        <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -189,7 +189,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
                    <a href="#">
                        <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -201,7 +201,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
                    <a href="#">
                        <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -215,12 +215,13 @@
 
 
            </ul>
-           <ul class="pagination-list">
+           <!-- для дополнительного
+            <ul class="pagination-list reset-list">
               <li class="pagination-item pagination-item-current"><a>1</a></li>
               <li class="pagination-item"><a href="#">2</a></li>
               <li class="pagination-item"><a href="#">3</a></li>
               <li class="pagination-item pagination-item_next"><a href="#">Следующая</a></li>
-           </ul>
+           </ul> -->
        </section> <!--/.catalog-->
    </main>
 
@@ -232,7 +233,7 @@
               <a class="footer-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
           </address>
           <div class="footer-nav">
-              <ul class="footer-nav-list">
+              <ul class="footer-nav-list reset-list">
                  <li><a href="#">Компания</a></li>
                  <li><a href="#">Новости</a></li>
                  <li><a href="catalog.html">Каталог</a></li>
@@ -240,7 +241,7 @@
                  <li><a href="#">Контакты</a></li>
               </ul>
 
-              <ul class="footer-offer-list">
+              <ul class="footer-offer-list reset-list">
                  <li><a href="#">Материалы</a></li>
                  <li><a href="#">Техника</a></li>
                  <li><a href="#">Инструмент</a></li>
@@ -253,7 +254,7 @@
                © 2010–2019 Компания «Техномарт»<br>
                Все права защищены
            </p>
-            <ul class="social-list">
+            <ul class="social-list reset-list">
                 <li class="social-item">
                     <a class="social-btn social-btn-vk" href="#">
                         <span class="visually-hidden">Вконтакте</span>
@@ -272,11 +273,11 @@
             </ul>
            <p class="feedback">
                Обратная связь:
-               <a class="btn" href="#">mailto:mail@htmlacademy.ru</a>
+               <a class="btn-feedback" href="#">mailto:mail@htmlacademy.ru</a>
            </p>
            <p class="develop">
                Разработано:
-               <a class="btn" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+               <a class="btn-feedback" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
            </p>
        </div>
    </footer>
