--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <label class="visually-hidden" for="header-search">Поиск</label>
               <input type="search" class="search-input" placeholder="Поиск:" id="header-search">
            </form>
-           <ul class="header-list">
+           <ul class="header-list reset-list">
                <li><a href="#">Закладки: <span>0</span></a></li>
                <li><a href="#">Корзина: <span>0</span></a></li>
                <li><a class="btn-order" href="#">Оформить заказ</a></li>
@@ -27,13 +27,13 @@
                <a class="header-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a><br>
                г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
            </address>
-           <ul class="auth">
+           <ul class="auth reset-list">
                <li><a class="login-link" href="#">Войти</a></li>
                <li><a class="check-in" href="#">Регистрация</a></li>
            </ul>
        </div>
        <nav class="main-navigation">
-           <ul class="site-navigation">
+           <ul class="site-navigation reset-list">
                <li><a href="#">Главная</a></li>
                <li><a href="#">Компания</a></li>
                <li><a href="catalog.html">Каталог</a></li>
@@ -130,7 +130,7 @@
              <h2>Компания «Техномарт»</h2>
              <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
              <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
-             <ul class="trans-comp">
+             <ul class="trans-comp reset-list">
                  <li>Деловые линии</li>
                  <li>Автотрейдинг</li>
                  <li>ЖелДорЭкспедиция</li>
@@ -158,7 +158,7 @@
               <a class="footer-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
           </address>
           <div class="footer-nav">
-              <ul class="footer-nav-list">
+              <ul class="footer-nav-list reset-list">
                  <li><a href="#">Компания</a></li>
                  <li><a href="#">Новости</a></li>
                  <li><a href="catalog.html">Каталог</a></li>
@@ -166,7 +166,7 @@
                  <li><a href="#">Контакты</a></li>
               </ul>
 
-              <ul class="footer-offer-list">
+              <ul class="footer-offer-list reset-list">
                  <li><a href="#">Материалы</a></li>
                  <li><a href="#">Техника</a></li>
                  <li><a href="#">Инструмент</a></li>
@@ -179,7 +179,7 @@
                © 2010–2019 Компания «Техномарт»<br>
                Все права защищены
            </p>
-            <ul class="social-list">
+            <ul class="social-list reset-list">
                 <li class="social-item">
                     <a class="social-btn social-btn-vk" href="#">
                         <span class="visually-hidden">Вконтакте</span>
