12. Основное задание: начинаем базовую стилизацию личного проекта

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                  <li>Автотрейдинг</li>
                  <li>ЖелДорЭкспедиция</li>
              </ul>
-             <a class="btn" href="#">Подробнее о компании</a>
+             <a class="btn btn-basic" href="#">Подробнее о компании</a>
          </section>
 
          <section class="contacts">
@@ -144,7 +144,7 @@
              <a href="#" aria-label="Открыть карту">
                  <img src="img/map.jpg" width="300" height="158" alt="Карта">
              </a>
-             <a class="btn" href="#">Заблудились? Напишите нам!</a>
+             <a class="btn btn-basic" href="#">Заблудились? Напишите нам!</a>
          </section>
      </div>
 
@@ -198,11 +198,11 @@
             </ul>
            <p class="feedback">
                Обратная связь:
-               <a class="btn-feedback" href="#">mailto:mail@htmlacademy.ru</a>
+               <a class="footer-link" href="#">mailto:mail@htmlacademy.ru</a>
            </p>
            <p class="develop">
                Разработано:
-               <a class="btn-feedback" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+               <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
            </p>
        </div>
    </footer>
