--- a/catalog.html
+++ b/catalog.html
@@ -105,7 +105,7 @@
            <h3 class="visually-hidden">Список инструментов</h3>
            <ul class="catalog-list reset-list">
                <li class="catalog-item new">
-                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
                    <a href="#">
                        <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -117,7 +117,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
                    <a href="#">
                        <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -129,7 +129,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
                    <a href="#">
                        <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -141,7 +141,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
                    <a href="#">
                        <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -153,7 +153,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
                    <a href="#">
                        <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -165,7 +165,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
                    <a href="#">
                        <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -177,7 +177,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
                    <a href="#">
                        <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -189,7 +189,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
                    <a href="#">
                        <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -201,7 +201,7 @@
                    <p class="price">15500 Р.</p>
                </li>
                <li class="catalog-item new">
-                   <h4><a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a></h4>
+                   <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
                    <a href="#">
                        <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                    </a>
@@ -273,11 +273,11 @@
             </ul>
            <p class="feedback">
                Обратная связь:
-               <a class="btn-feedback" href="#">mailto:mail@htmlacademy.ru</a>
+               <a class="footer-link" href="#">mailto:mail@htmlacademy.ru</a>
            </p>
            <p class="develop">
                Разработано:
-               <a class="btn-feedback" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+               <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
            </p>
        </div>
    </footer>
