Работа над ошибками
Задал шрифт через класс title

--- a/catalog.html
+++ b/catalog.html
@@ -57,9 +57,9 @@
            <li><a href="#">Инструменты</a></li>
            <li><a href="#">Перфораторы</a></li>
        </ul>
-       <h2 class="catalog-header">Перфораторы</h2>
+       <h2 class="title" class="catalog-header">Перфораторы</h2>
        <section class="filter">
-           <h3>Фильтр:</h3>
+           <h3 class="title">Фильтр:</h3>
            <form class="filter" method="get" action="https://echo.htmlacademy.ru">
                <fieldset>
                    <legend>Производители:</legend>
@@ -104,7 +104,7 @@
        </section> <!--/.filter-->
 
        <section class="catalog">
-           <h3 class="visually-hidden">Список инструментов</h3>
+           <h3 class="visually-hidden title">Список инструментов</h3>
            <ul class="catalog-list reset-list">
                <li class="catalog-item new">
                    <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
@@ -285,7 +285,7 @@
    </footer>
 
    <section class="modal modal-cart">
-       <h2 class="visually-hidden">Добавление товара в корзину</h2>
+       <h2 class="visually-hidden title">Добавление товара в корзину</h2>
        <p>Товар добавлен в корзину!</p>
        <a href="#">Оформить заказ</a>
        <button class="btn btn-continue" type="button">Продолжить покупки</button>
