--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
    <main class="container">
     <!-- Оформлять после основного задания
      <section class="services">
-         <h2 class="visually-hidden">Услуги</h2>
+         <h2 class="visually-hidden title">Услуги</h2>
 
      </section>
 
      <section class="popular-goods">
          <div class="popular-goods-header">
-             <h2>Популярный товары</h2>
+             <h2 class="title">Популярный товары</h2>
              <a href="catalog.html">Все популярные товары</a>
          </div>
          <ul class="popular-list">
@@ -112,7 +112,7 @@
 
      <section class="brand">
          <div class="brand-header">
-             <h2>Популярные производители:</h2>
+             <h2 class="title">Популярные производители:</h2>
              <a href="">Все производители</a>
          </div>
          <ul class="brand-list">
@@ -129,7 +129,7 @@
 -->
     <div class="index-columns"><!--Проверить-->
          <section class="features">
-             <h2>Компания «Техномарт»</h2>
+             <h2 class="title">Компания «Техномарт»</h2>
              <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
              <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
              <ul class="trans-comp reset-list">
@@ -141,7 +141,7 @@
          </section>
 
          <section class="contacts">
-             <h2>Контакты</h2>
+             <h2 class="title">Контакты</h2>
              <p>Вы можете забрать товар сами, заехав в наш офис:</p>
              <a href="#" aria-label="Открыть карту">
                  <img src="img/map.jpg" width="300" height="158" alt="Карта">
@@ -210,7 +210,7 @@
    </footer>
 
     <section class="modal modal-write-us">
-        <h2 class="visually-hidden">Напишите нам</h2>
+        <h2 class="visually-hidden title">Напишите нам</h2>
         <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
             <p>
                 <label for="user-name">Ваше имя:</label>
@@ -230,7 +230,7 @@
     </section>
 
     <section class="modal modal-map">
-        <h2 class="visually-hidden">
+        <h2 class="visually-hidden title">
             Как до нас добраться
         </h2>
         <img src="img/big-map.jpg" width="940" height="446" alt="Офис компании по адресу Большая Конюшенная 19/8, Санкт-Петербург">
